--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  firebase_auth: ^0.18.4+1
+  firebase_core: ^0.5.3
   flutter_launcher_icons: ^0.8.1
   flutter_svg: ^0.19.1
 
