--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,17 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
+  flutter_cache_manager: ^2.1.1
   flutter_launcher_icons: ^0.8.1
   flutter_svg: ^0.19.1
+  image_cropper: ^1.3.1
   percent_indicator: ^2.1.9
+  wallpaper_manager: ^1.0.10
+
+dependency_overrides:
+   extended_image:
+     git:
+       url: git://github.com/jonataslaw/extended_image.git
 
 dev_dependencies:
   flutter_test:
